--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,4 +7,10 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/activity_main"
-        tools:context=".activity.MainActivity"/>
+        tools:context=".activity.MainActivity">
+    <com.example.androidisshit.adapter.ParallaxRecyclerView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/RecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
