--- a/app/src/main/res/layout/mainlist_cover.xml
+++ b/app/src/main/res/layout/mainlist_cover.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="180dp"
@@ -9,12 +9,12 @@
             android:id="@+id/cover_img"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-
     <TextView
             android:id="@+id/cover_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:textColor="@android:color/white"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-</LinearLayout>
+            android:textSize="25sp"/>
+</RelativeLayout>
