now playing cover blur shadow

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,7 +8,7 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/activity_main"
         tools:context=".activity.MainActivity">
-    <com.example.androidisshit.adapter.ParallaxRecyclerView
+    <com.example.androidisshit.component.ParallaxRecyclerView
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/RecyclerView"
             android:layout_width="match_parent"
