--- a/app/src/main/res/layout/activity_now_playing.xml
+++ b/app/src/main/res/layout/activity_now_playing.xml
@@ -7,27 +7,26 @@
     <com.example.androidisshit.component.VerticalTextView
             android:id="@+id/nowPlay_title"
             android:text="@string/album_title"
-            android:layout_width="84dp"
+            android:layout_width="95dp"
             android:layout_height="0dp"
             android:paddingStart="0dp"
             android:paddingEnd="0dp"
             app:layout_constraintTop_toTopOf="parent"
             android:textSize="@dimen/nowPlaying_albumTitleSize"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"/>
-    <ImageView
-            android:id="@+id/nowPlay_albumImage"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            app:srcCompat="@mipmap/test_load"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+    <com.example.androidisshit.component.NowPlayingCoverView
+            android:id="@+id/nowPlay_cover"
+            android:layout_width="310dp"
+            android:layout_height="308dp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginStart="8dp"
+            app:layout_constraintVertical_bias="0.354"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintVertical_bias="0.39"
-            android:contentDescription="@string/nowPlaying_albumImage"/>
+            android:layout_marginEnd="8dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
