--- a/app/src/main/res/layout/activity_now_playing.xml
+++ b/app/src/main/res/layout/activity_now_playing.xml
@@ -7,18 +7,22 @@
     <com.example.androidisshit.component.VerticalTextView
             android:id="@+id/nowPlay_title"
             android:text="@string/album_title"
-            android:layout_width="95dp"
-            android:layout_height="0dp"
+            android:layout_width="171dp"
+            android:layout_height="899dp"
             android:paddingStart="0dp"
             android:paddingEnd="0dp"
             app:layout_constraintTop_toTopOf="parent"
             android:textSize="@dimen/nowPlaying_albumTitleSize"
+            android:textScaleX="0.5"
+            android:fontFamily="sans-serif-light"
+            android:ellipsize="none"
+            android:singleLine="true"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.31"
+            android:layout_marginTop="32dp" android:layout_marginBottom="32dp"/>
     <com.example.androidisshit.component.NowPlayingCoverView
             android:id="@+id/nowPlay_cover"
-            android:layout_width="310dp"
-            android:layout_height="308dp"
+            android:layout_width="380dp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginBottom="8dp"
@@ -27,6 +31,29 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"/>
+            android:layout_marginEnd="8dp" android:layout_height="380dp"/>
+    <Button
+            android:id="@+id/nowPlay_button_start"
+            android:background="@color/nowPlaying_start_back"
+            android:text="@string/nowPlaying_start"
+            android:fontFamily="@font/font_sourcehanserif"
+            android:scaleY="1.5"
+            android:textSize="35sp"
+            android:layout_width="107dp"
+            android:layout_height="66dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/nowPlay_cover" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
+            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
+    <TextView
+            android:id="@+id/nowPlay_artist"
+            android:text="@string/nowPlaying_artist"
+            android:textSize="30sp"
+            android:layout_width="112dp"
+            android:layout_height="113dp"
+            app:layout_constraintStart_toStartOf="@+id/nowPlay_button_start"
+            android:layout_marginStart="64dp" android:layout_marginTop="56dp"
+            app:layout_constraintTop_toTopOf="@+id/nowPlay_button_start"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
