--- a/app/src/main/res/layout/mainlist_cover.xml
+++ b/app/src/main/res/layout/mainlist_cover.xml
@@ -2,13 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="180dp"
+              android:layout_height="150dp"
               android:clickable="true"
               android:focusable="true">
     <com.example.androidisshit.component.ParallaxImageView
             android:id="@+id/cover_img"
             android:layout_width="match_parent"
-            android:layout_height="180dp"/>
+            android:layout_height="150dp"/>
     <TextView
             android:id="@+id/cover_title"
             android:gravity="center"
@@ -16,5 +16,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textColor="@android:color/white"
-            android:textSize="25sp"/>
+            android:fontFamily="sans-serif-light"
+            android:letterSpacing="1.2"
+            android:lineSpacingExtra="2dp"
+            android:maxLines="3"
+            android:ellipsize="end"
+            android:textSize="20sp"/>
 </RelativeLayout>
