--- a/app/src/main/res/layout/mainlist_cover.xml
+++ b/app/src/main/res/layout/mainlist_cover.xml
@@ -4,7 +4,8 @@
               android:layout_width="match_parent"
               android:layout_height="150dp"
               android:clickable="true"
-              android:focusable="true">
+              android:focusable="true"
+              android:foreground="@drawable/ripple">
     <com.example.androidisshit.component.ParallaxImageView
             android:id="@+id/cover_img"
             android:layout_width="match_parent"
