--- a/app/src/main/res/layout/fragment_now_playing.xml
+++ b/app/src/main/res/layout/fragment_now_playing.xml
@@ -5,7 +5,7 @@
         android:id="@+id/nowPlay_background"
         android:layout_height="match_parent">
 
-    <com.example.androidisshit.component.VerticalTextView
+    <com.example.lunamusic.component.VerticalTextView
             android:id="@+id/nowPlay_title"
             android:text="@string/album_title"
             android:layout_width="171dp"
@@ -21,7 +21,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.31"
             android:layout_marginTop="32dp" android:layout_marginBottom="32dp"/>
-    <com.example.androidisshit.component.NowPlayingCoverView
+    <com.example.lunamusic.component.NowPlayingCoverView
             android:id="@+id/nowPlay_cover"
             android:layout_width="380dp"
             android:layout_marginTop="8dp"
